# oxictl

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
benches/: control_bench.rs  foc_bench.rs  kalman_bench.rs  kinematics_bench.rs  mpc_bench.rs  pid_bench.rs  scheduler_bench.rs  state_feedback_bench.rs
examples/: adrc_servo.rs  antiwindup_demo.rs  battery_simulation.rs  bicycle_mpc.rs  bode_analysis.rs  control_allocation_uav.rs  dob_motor.rs  ekf_slam_demo.rs  ethercat_servo.rs  extremum_seeking.rs  fdi_motor.rs  fixed_point_pid.rs  foc_motor.rs  fuzzy_temperature.rs  geometric_attitude.rs  gp_learning.rs  ilc_repetitive.rs  kalman_tracking.rs  koopman_pendulum.rs  lms_noise_cancel.rs  mpc_inverted_pendulum.rs  mppi_obstacle.rs  multi_sensor_fusion.rs  optimal_trajectory.rs  passive_control.rs  pid_temperature.rs  pso_pid_tuning.rs  quantized_control.rs  repetitive_control.rs  robust_mpc_pendulum.rs  ros2_chatter.rs  ros2_imu_publisher.rs  ros2_twist_subscriber.rs  safety_watchdog.rs  super_twisting_motor.rs  switched_controller.rs  trajectory_planning.rs  vrft_tuning.rs
src/: lib.rs  prelude.rs
src/adaptive/: dual_control.rs  gain_scheduler.rs  gain_scheduling.rs  lyapunov_mrac.rs  mod.rs  mrac.rs  mrac_second_order.rs  rls.rs  self_tuning_regulator.rs  stc.rs
src/allocation/: linear_programming.rs  mod.rs  prioritized.rs  weighted_pseudo.rs
src/antiwindup/: aw_compensator.rs  conditioning_technique.rs  mod.rs  observer_aw.rs
src/comm/: mod.rs  packet_dropout.rs  quantizer.rs  time_delay.rs
src/core/: README.md  discretize.rs  linearization.rs  matrix.rs  mod.rs  saturation.rs  scalar.rs  signal.rs  state_space.rs  traits.rs  transfer_fn.rs
src/data_driven/: correlation_tuning.rs  frit.rs  mod.rs  vrft.rs
src/disturbance/: dob.rs  mod.rs  ndob.rs  ude.rs
src/estimator/: adaptive_kf.rs  batch_ml.rs  cauchy_estimator.rs  complementary.rs  constrained_kf.rs  ekf.rs  em_algorithm.rs  ensemble_kf.rs  fixed_interval_smoother.rs  hinf_filter.rs  huber_kalman.rs  imm.rs  information_filter.rs  kalman.rs  marginalized_particle.rs  mod.rs  particle.rs  rts_smoother.rs  sqrt_kalman.rs  ukf.rs  variational_bayes_filter.rs
src/extremum/: gradient_esc.rs  mod.rs  newton_esc.rs
src/fdi/: hypothesis_test.rs  mod.rs  observer_fdi.rs  parity_space.rs
src/flatness/: manipulator_flat.rs  mod.rs  quadrotor_flat.rs  unicycle_flat.rs
src/fuzzy/: defuzzify.rs  fuzzy_pid.rs  inference.rs  membership.rs  mod.rs  rule_base.rs
src/geometric/: geometric_control.rs  mod.rs  quaternion.rs  se3.rs  so3.rs
src/gp/: cholesky.rs  gp_regression.rs  kernel.rs  mod.rs  sparse_gp.rs
src/hybrid/: automaton.rs  mod.rs  piecewise_affine.rs  switched_lti.rs
src/ilc/: d_type_ilc.rs  mod.rs  norm_optimal_ilc.rs  p_type_ilc.rs
src/imc/: imc_controller.rs  mod.rs  pfc.rs  smith_predictor.rs
src/io/: binary_log.rs  csv_log.rs  json_export.rs  kizzasi_bridge.rs  mod.rs  oxigrid_bridge.rs  oxirs_bridge.rs  scope_export.rs
src/kinematics/: collision.rs  dynamics.rs  forward.rs  jacobian.rs  mod.rs  path_joint.rs  redundancy.rs  workspace.rs
src/koopman/: edmd.rs  koopman_mpc.rs  lifting_functions.rs  mod.rs
src/motor/: mod.rs
src/mpc/: adaptive.rs  constraints.rs  distributed_mpc.rs  economic_mpc.rs  explicit_mpc.rs  horizon.rs  linear_mpc.rs  mod.rs  moving_horizon_estimator.rs  mppi.rs  multi_objective_mpc.rs  multi_stage_mpc.rs  nonlinear_mpc.rs  robust_mpc.rs  soft_constraints.rs  stochastic_mpc.rs  tracking_mpc.rs  tube_mpc.rs  warm_start.rs
src/navigation/: dead_reckoning.rs  ekf_slam_2d.rs  mod.rs  pose_graph.rs
src/networked/: consensus.rs  event_triggered.rs  mod.rs  self_triggered.rs
src/neural/: activations.rs  layer.rs  mod.rs  network.rs  neural_pid.rs  rbf_network.rs
src/optim/: genetic_algorithm.rs  mod.rs  particle_swarm.rs  simulated_annealing.rs
src/optimal/: mod.rs  multiple_shooting.rs  ode_solver.rs  pontryagin.rs  single_shooting.rs
src/passivity/: ida_pbc.rs  mod.rs  port_hamiltonian.rs  storage_function.rs
src/pid/: README.md  anti_windup.rs  auto_tune.rs  bumpless_transfer.rs  cascade.rs  derivative_filter.rs  gain_schedule.rs  incremental.rs  mod.rs  smith_predictor.rs  standard.rs  two_degree.rs
src/power/: active_filter.rs  ddsrf_pll.rs  frequency.rs  mod.rs  mppt.rs  pll.rs
src/protocol/: mod.rs
src/repetitive/: feedforward.rs  mod.rs  repetitive_controller.rs  two_dof_controller.rs
src/safety/: README.md  byzantine_voter.rs  diagnostic.rs  fault.rs  fmea.rs  handler.rs  heartbeat.rs  mod.rs  redundancy_ext.rs  reliability.rs  safe_state_ext.rs  sil.rs  watchdog.rs
src/scheduler/: edf_scheduler.rs  event_driven.rs  fixed_rate.rs  mod.rs  multi_rate.rs  overrun.rs  timing.rs
src/sim/: README.md  battery.rs  bicycle.rs  cart_pole.rs  dc_motor.rs  differential_drive.rs  energy_storage.rs  fuel_cell.rs  grid_model.rs  hil.rs  mod.rs  motor_sim.rs  noise_models.rs  nonlinear_pendulum.rs  pendulum.rs  plant.rs  quadrotor.rs  robotic_arm.rs  scope.rs  thermal_sim.rs  three_tank.rs  vehicle_dynamics.rs  vehicle_platoon.rs
src/state_feedback/: adrc.rs  backstepping.rs  continuous_lqr.rs  h2.rs  integral_sliding_mode.rs  lqg.rs  lqi.rs  lqr.rs  mod.rs  model_free_control.rs  output_feedback.rs  pole_placement.rs  prescaler.rs  prescribed_time.rs  servo.rs  super_twisting.rs  terminal_smc.rs
src/sysid/: armax.rs  arx.rs  instrumental_variables.rs  mod.rs  subspace.rs  validation.rs
src/trajectory/: bezier.rs  bspline.rs  clothoid.rs  cubic_spline.rs  dubins.rs  jerk_limited.rs  mod.rs  polynomial.rs  quintic.rs  rrt.rs  time_optimal.rs  trapezoidal.rs
tests/: step_response.rs
tests/dds_action_integration/: main.rs
tests/dds_api_integration/: main.rs
tests/dds_service_integration/: main.rs
tests/estimator_validation/: ekf_nonlinear.rs  kalman_linear.rs  main.rs  observer_convergence.rs
tests/fixed_point_validation/: main.rs  pid_step_response.rs  roundtrip.rs  saturation_check.rs
tests/frequency_domain_validation/: bode_margins.rs  main.rs
tests/fuzzy_validation/: fuzzy_inference.rs  main.rs
(+282 files in other folders)
